--- a/sigplanconf-template.tex
+++ b/sigplanconf-template.tex
@@ -20,18 +20,18 @@
 %-----------------------------------------------------------------------------
 
 
-\documentclass[preprint]{sigplanconf}
+\documentclass[10pt]{sigplanconf}
 
-% The following \documentclass options may be useful:
-
-% preprint      Remove this option only once the paper is in final form.
-% 10pt          To set in 10-point type instead of 9-point.
-% 11pt          To set in 11-point type instead of 9-point.
-% numbers       To obtain numeric citation style instead of author/year.
-
-\usepackage{amsmath}
-
-\newcommand{\cL}{{\cal L}}
+%% TODO: Please consider providing PDF metadata
+% \usepackage[bookmarks=true,bookmarksnumbered=true,
+%     pdfpagemode={UseOutlines},plainpages=false,pdfpagelabels=true,
+%     colorlinks=true,linkcolor={black},citecolor={black},urlcolor={black},
+%     pdftitle={TITLE},%
+%     pdfsubject={short description},%
+%     pdfauthor={authors, no umlauts supported},%
+%     pdfkeywords={keywords},
+%     pdftex]{hyperref}
+\usepackage{hyperref}
 
 \begin{document}
 
