Change template for Creative Commons license
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/sigplanconf-template.tex
+++ b/sigplanconf-template.tex
@@ -39,15 +39,12 @@
 \setlength{\pdfpageheight}{\paperheight}
 \setlength{\pdfpagewidth}{\paperwidth}
 
-\conferenceinfo{CONF 'yy}{Month d--d, 20yy, City, ST, Country}
-\copyrightyear{20yy}
-\copyrightdata{978-1-nnnn-nnnn-n/yy/mm}
-\copyrightdoi{nnnnnnn.nnnnnnn}
+\conferenceinfo{Meta'16}{October 30, 2016, Amsterdam, Netherlands}
+\copyrightyear{2016}
 
 % Uncomment the publication rights you want to use.
-%\publicationrights{transferred}
-%\publicationrights{licensed}     % this is the default
-%\publicationrights{author-pays}
+\publicationrights{ccbynd}
+% \publicationrights{ccby}     % this is the default
 
 \titlebanner{banner above paper title}        % These are ignored unless
 \preprintfooter{short description of paper}   % 'preprint' option specified.
