Adapted for MoreVMs’17
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/sigplanconf-template.tex
+++ b/sigplanconf-template.tex
@@ -39,8 +39,8 @@
 \setlength{\pdfpageheight}{\paperheight}
 \setlength{\pdfpagewidth}{\paperwidth}
 
-\conferenceinfo{Meta'16}{October 30, 2016, Amsterdam, Netherlands}
-\copyrightyear{2016}
+\conferenceinfo{MoreVMs'17}{April 3, 2017, Brussels, Belgium}
+\copyrightyear{2017}
 
 % Uncomment the publication rights you want to use.
 \publicationrights{ccbynd}
