Some stylistic improvements
Signed-off-by: Stefan Marr <git@stefan-marr.de>

--- a/sigplanconf-template.tex
+++ b/sigplanconf-template.tex
@@ -32,12 +32,13 @@
 %     pdfkeywords={keywords},
 %     pdftex]{hyperref}
 \usepackage{hyperref}
+\usepackage[pass,letterpaper]{geometry}
+
+\nocaptionrule
+\frenchspacing
+\raggedbottom
 
 \begin{document}
-
-\special{papersize=8.5in,11in}
-\setlength{\pdfpageheight}{\paperheight}
-\setlength{\pdfpagewidth}{\paperwidth}
 
 \conferenceinfo{MoreVMs'17}{April 3, 2017, Brussels, Belgium}
 \copyrightyear{2017}
