--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -4,31 +4,18 @@
 
 
 % Copyright
-%\setcopyright{none}
-%\setcopyright{acmcopyright}
-%\setcopyright{acmlicensed}
-\setcopyright{rightsretained}
-%\setcopyright{usgov}
-%\setcopyright{usgovmixed}
-%\setcopyright{cagov}
-%\setcopyright{cagovmixed}
+% \setcopyright{rightsretained}
+% \setcopyright{ccbyncnd}
+\setcopyright{ccby}
 
-
-% DOI
-\acmDOI{10.475/123_4}
-
-% ISBN
-\acmISBN{123-4567-24-567/08/06}
 
 %Conference
-\acmConference[WOODSTOCK'97]{ACM Woodstock conference}{July 1997}{El
-  Paso, Texas USA}
-\acmYear{1997}
-\copyrightyear{2016}
+\acmDOI{}
+\acmISBN{}
+\acmConference[MoreVMs'18]{Workshop on Modern Language Runtimes, Ecosystems, and VMs}{April 2018}{Nice, France}
+\acmYear{2018}
+\copyrightyear{2018}
 
-
-\acmArticle{4}
-\acmPrice{15.00}
 
 % These commands are optional
 %\acmBooktitle{Transactions of the ACM Woodstock conference}
@@ -169,7 +156,7 @@ ACM SIG Proceedings.\footnote{This is an abstract footnote}
 
 \maketitle
 
-\input{samplebody-conf}
+\section{Intro, Main, Conclusion...}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{sample-bibliography}
